# kauldron

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
docs/: checkpoint.md  conf.py  data.md  eval.md  export.md  features.md  index.md  intro.md  konfig_philosophy.md  metrics.md  nnx.md  sharding.md  train.md  typing.md
examples/: configargs_demo.py  metaconfig_demo.py  mnist_autoencoder.py  mnist_autoencoder_checkified.py  mnist_autoencoder_remote_eval.py  mnist_autoencoder_remote_shared_eval.py  mnist_autoencoder_sharded.py  mnist_eval_only.py  mnist_standalone_eval.py  tiny_vit_advanced.py  tiny_vit_imagenet.py  vit_b_i1k.py
examples/contrib/: nnx_mnist.py  readout_mnist.py  train_evaluator.py
examples/test/: minimal.py  mnist_autoencoder.py  mock_data.py
kauldron/: __init__.py  conftest.py  kd.py  kxm.py  main.py  train.py
kauldron/checkpoints/: __init__.py  checkpoint_items.py  checkpointer.py  checkpointer_test.py  lazy_checkpoint_manager.py  partial_loader.py  partial_loader_test.py  pytree_checkpoint.py  pytree_checkpoint_test.py
kauldron/cli/: README.md  __init__.py  cmd_utils.py  config.py  config_test.py  data.py  data_test.py  inspect_cli.py  inspect_test.py  main.py  main_test.py  multi.py  patch_config.py  patch_config_test.py  run.py  run_test.py
kauldron/contrib/: README.md  __init__.py  _lazy_imports.py  _lazy_imports_test.py
kauldron/core/: __init__.py  annotate.py  context.py  paths.py  paths_test.py
kauldron/data/: __init__.py  data_utils.py  deprecated.py  extra_image_ops.py  grain_utils.py  grain_utils_test.py  in_memory.py  in_memory_test.py  pipelines.py  preprocessing.py  preprocessing_test.py  utils.py  utils_test.py
kauldron/evals/: __init__.py  eval_impl.py  eval_impl_test.py  evaluators.py  evaluators_test.py  fewshot_evaluator.py  run_strategies.py
kauldron/examples/: mnist_autoencoder.py  mnist_autoencoder_remote_eval.py  mnist_autoencoder_remote_shared_eval.py  tiny_vit_imagenet.py  vit_b_i1k.py
kauldron/export/: __init__.py  exporter.py
kauldron/inspect/: __init__.py  graphviz_utils.py  inspect.py  inspect_test.py  plotting.py  profile_utils.py  trainer_visu.py
kauldron/klinen/: README.md  __init__.py  collections.py  convert_utils.py  intermediate.py  intermediate_proxy.py  layers.py  module.py  module_rng_test.py  module_test.py  traverse.py
kauldron/konfig/: README.md  __init__.py  configdict_base.py  configdict_base_test.py  configdict_proxy.py  configdict_proxy_test.py  default_values.py  export_utils.py  export_utils_test.py  fake_import_utils.py  fake_import_utils_test.py  flags_utils.py  immutabledict_lib.py  immutabledict_lib_test.py  module_configdict.py  py_flag_grammar.lark  py_flag_parser.py  py_flag_parser_test.py  py_flag_utils.py  py_flag_utils_test.py  ref_utils.py  ref_utils_test.py  utils.py  utils_test.py
kauldron/kontext/: README.md  __init__.py  annotate.py  annotate_test.py  filter_utils.py  filter_utils_test.py  glob_paths.py  glob_paths_test.py  path_builder.py  path_builder_test.py  path_grammar.lark  path_parser.py  path_parser_test.py  paths.py  paths_test.py  type_utils.py  type_utils_test.py
kauldron/ktyping/: README.md  STYLE.md  __init__.py  array_type_meta.py  array_types.py  array_types_test.py  config.py  config_test.py  constraints.py  decorator.py  decorator_test.py  dim_view.py  dtypes.py  errors.py  errors_test.py  frame_utils.py  frame_utils_test.py  internal_typing.py  log.py  pyrefly_test_sample.py  pytree.py  pytree_test.py  scope.py  scope_test.py  shape_spec.py  shape_spec_grammar.lark  shape_spec_parser.py  shape_spec_parser_test.py  shape_spec_test.py  shape_tools.py  shape_tools_test.py  symbolic_dims_test.py  typeguard_checkers.py  typeguard_checkers_test.py  utils.py  utils_test.py
kauldron/losses/: __init__.py  base.py  base_test.py  simple.py
kauldron/metrics/: __init__.py  auto_state.py  auto_state_test.py  base.py  base_state.py  base_state_test.py  base_test.py  classification.py  classification_test.py  clustering.py  fid.py  image.py  image_test.py  imports_test.py  lpips.py  lpips_test.py  point_tracking.py  stats.py  stats_test.py
kauldron/modules/: __init__.py  adapter.py  adapter_test.py  attention.py  deprecated.py  input_embeddings.py  knn_types.py  misc.py  models.py  pos_embeddings.py  transformers.py  vit.py
kauldron/optim/: __init__.py  _freeze.py  _freeze_test.py  _masks.py  _masks_test.py  combine.py  ema_params.py  ema_weights.py  transform.py
kauldron/random/: README.md  __init__.py  random.py  random_test.py
kauldron/summaries/: __init__.py  base.py  deprecated.py  histograms.py  images.py  pointclouds.py  texts.py  texts_test.py
kauldron/testing/: __init__.py  assert_spec.py  assert_utils.py
kauldron/train/: __init__.py  auxiliaries.py  checkpoint_state.py  checkpointer.py  config_lib.py  context.py  evaluators.py  evaluators_test.py  fewshot_evaluator.py  flatboard.py  flatboard_utils.py  metric_writer.py  metric_writer_test.py  rngs_lib.py  setup_utils.py  setup_utils_test.py  status_utils.py  timer.py  train.py  train_lib.py  train_loop.py  train_step.py  train_test.py  trainer_lib.py
kauldron/typing/: __init__.py  array_types.py  array_types_test.py  shape_parser.py  shape_spec.lark  shape_spec.py  shape_spec_test.py  type_check.py  type_check_test.py  utils.py
kauldron/utils/: __init__.py  _filter_logs.py  _jax.py  _jax_test.py  annotate.py  api.py  assert_utils.py  chrono_utils.py  colab.py  config_util.py  config_util_test.py  constants.py  context.py  core.py  error_utils.py  from_xid.py  graphviz_utils.py  import_test.py  inspect.py  interms_property.py  jax_utils.py  path_builder.py  path_builder_test.py  paths.py  paths_test.py  pd_utils.py  plot_segmentation.py  plotting.py  profile_utils.py  sharding_utils.py  sharding_utils_test.py  standalone_parser.py  status_utils.py  sweep_utils.py  sweep_utils_test.py  train_property.py  train_property_test.py  type_utils.py  type_utils_test.py  utils.py  (+1 more)
kauldron/xm/: README.md  (+1 more)
(+212 files in other folders)
