[project]
name = "kauldron"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "kauldron authors", email="kauldron@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project

# pip dependencies of the project
dependencies = [
    "absl-py",
    "altair",
    "chex",
    "clu",
    "einops",
    "etils[edc,enp,epath,epy,etree]",
    "flax",
    "grain",
    "graphviz",
    "jax",
    "jaxtyping",
    "lark==0.12.0",  # TODO(klausg): fix and remove this version pin
    "mediapy",
    # we use features/fixes that are newer than the current (0.1.1) release
    "ml_collections@git+https://github.com/google/ml_collections@master",
    "numpy",
    "numpy",
    "optax",
    "orbax-checkpoint",
    "pandas",
    "regex",
    "scikit-image",
    "scikit-learn",
    "tensorflow",
    "tensorflow_datasets",
    "tqdm",
    # closest match to the internal typeguard
    "typeguard@git+https://github.com/agronholm/typeguard@0dd7f7510b7c694e66a0d17d1d58d185125bad5d",
    "typing_extensions",
    "xmanager",
    # lazy deps (should ideally remove those)
    # "grand_vision",
]

# This is set automatically by flit using `kauldron.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/kauldron"
repository = "https://github.com/google-research/kauldron"
documentation = "https://kauldron.readthedocs.io"

# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "hypothesis==6.80.0",
    "pylint>=2.6.0",
    "pyink",
]
# Installed through `pip install .[docs]`
docs = [
    # Install `apitree` with all extensions (sphinx, theme,...)
    "sphinx-apitree[ext]",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]
