[project]
name = "kauldron"
description = "Kauldron is a ML research library optimized for quick iteration and modularity."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "kauldron authors", email="kauldron@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# By default, install all dependencies (backward compatible).
# For lightweight installs, use e.g. `pip install kauldron[konfig]`
dependencies = []

# This is set automatically by flit using `kauldron.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/kauldron"
repository = "https://github.com/google-research/kauldron"
documentation = "https://kauldron.readthedocs.io"

# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Lightweight sub-module installs
konfig = [
    "absl-py",
    "etils[edc,enp,epath,epy]",
    "immutabledict",
    "lark",
    "ml_collections",
]
kontext = [
    "etils[epy,etree-jax]",
    "jax",
    "ml_collections",
    "typing_extensions",
]
ktyping = [
    "etils[edc,enp,epath,epy]",
    "immutabledict",
    "jax",
    "lark",
    "numpy",
    "typeguard>=4.4.1",
]
# Full install (all dependencies, equivalent to the previous default)
# Installed through `pip install kauldron[all]`
all = [
    "kauldron[konfig,kontext,ktyping]",
    "altair",
    "chex",
    "clu",
    "einops",
    "etils[edc,enp,epath,epy,etree]",
    "flax",
    "grain ; sys_platform != 'win32'",
    "graphviz",
    "jaxtyping",
    "mediapy",
    "opencv-python",  # speeds up pygrain image loading
    "optax",
    "orbax-checkpoint",
    "pandas",
    "scikit-image",
    "scikit-learn",
    "tabulate",  # used by pandas.DataFrame.to_markdown (for logging context)
    "tensorboard",  # required by clu.metric_writers
    "tensorflow",
    "tensorflow_datasets>=4.9.7",
    "tqdm",
    "xmanager",
]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "kauldron[all]",
    "pytest",
    "pytest-xdist",
    "hypothesis==6.80.0",
    "pylint>=2.6.0",
    "pyink",
]
# Installed through `pip install .[docs]`
docs = [
    # Install `apitree` with all extensions (sphinx, theme,...)
    "sphinx-apitree[ext]",
]

[project.scripts]
kauldron = "kauldron.cli:main"

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]
